    sequences from logs for smaller/more readable logs (submitted by
    Mike Naberezny).

  - The XML-RPC method supervisor.getVersion() has been renamed for 
    clarity to supervisor.getAPIVersion().  The old name is aliased 
    for compatibility but is deprecated and will be removed in a
    future version (Mike Naberezny).

  - Improved web interface styling (Mike Naberezny, Derek DeVries)

2.2b1

  - Individual program configuration sections can now specify an
    environment.

  - Added a 'version' command to supervisorctl.  This returns the
    version of the supervisor2 package which the remote supervisord
    process is using.

2.1

  - When supervisord was invoked more than once, and its configuration
    was set up to use a UNIX domain socket as the HTTP server, the
    socket file would be erased in error.  The symptom of this was
    that a subsequent invocation of supervisorctl could not find the
    socket file, so the process could not be controlled (it and all of
    its subprocesses would need to be killed by hand).

  - Close subprocess file descriptors properly when a subprocess exits
    or otherwise dies.  This should result in fewer "too many open
    files to spawn foo" messages when supervisor is left up for long
    periods of time.

  - When a process was not killable with a "normal" signal at shutdown
    time, too many "INFO: waiting for x to die" messages would be sent
    to the log until we ended up killing the process with a SIGKILL.
    Now a maximum of one every three seconds is sent up until SIGKILL
    time.  Thanks to Ian Bicking.

  - Add an assertion: we never want to try to marshal None to XML-RPC
    callers.  Issue 223 in the collector from vgatto indicates that
    somehow a supervisor XML-RPC method is returning None (which
    should never happen), but I cannot identify how.  Maybe the
    assertion will give us more clues if it happens again.

  - Supervisor would crash when run under Python 2.5 because the